feat: added scrape to fill form use case
